--- a/html/index.html
+++ b/html/index.html
@@ -193,7 +193,7 @@
                                 <img src="../img/card3.png" alt="">
                             </div>
                             <div class="top-text">
-                                <div class="name">考研打卡 | 数据结构</div>
+                                <div class="name">涨芝士 | 数据结构</div>
                                 <p>传说中令人头晕目眩的KMP</p>
                             </div>
                             <div class="bottom-text">
